# fhir

./: .bazelrc  .gitignore  BUILD  MODULE.bazel  README.md  WORKSPACE  extensions.bzl  package.json  pnpm-lock.yaml  workspace_deps.bzl
bazel/: BUILD  antlr4_cc.bzl  maven_install.json  proto.bzl  protogen.bzl
cc/google/fhir/: BUILD
cc/google/fhir/fhir_path/: BUILD
cc/google/fhir/testutil/: BUILD
go/: BUILD  go.mod  go.sum
go/fhirpath/: BUILD
go/jsonformat/: BUILD  marshaller.go  unmarshaller.go  unmarshaller_test.go
go/jsonformat/internal/jsonpbhelper/: BUILD  fhirutil_test.go
proto/: BUILD
proto/google/fhir/proto/: BUILD  annotations.proto  profile_config.proto
proto/google/fhir/proto/r4/: fhirproto.proto  fhirproto_extensions.proto  google_extensions.proto  ml_extensions.proto  uscore.proto  uscore_codes.proto
proto/google/fhir/proto/r4/core/: codes.proto  datatypes.proto  extensions.proto  valuesets.proto
proto/google/fhir/proto/r4/core/profiles/: actual_group.proto  cds_hooks_guidance_response.proto  cds_hooks_request_group.proto  cds_hooks_service_plan_definition.proto  cholesterol.proto  clinical_document.proto  computable_plan_definition.proto  cqf_questionnaire.proto  cql_library.proto  datatypes.proto  device_metric_observation_profile.proto  diagnostic_report_genetics.proto  ehrsfm_record_lifecycle_event_audit_event.proto  ehrsfm_record_lifecycle_event_provenance.proto  evidence_synthesis_profile.proto  group_definition.proto  hdl_cholesterol.proto  ldl_cholesterol.proto  lipid_profile.proto  observation_bmi.proto  observation_bodyheight.proto  observation_bodytemp.proto  observation_bodyweight.proto  observation_bp.proto  observation_genetics.proto  observation_headcircum.proto  observation_heartrate.proto  observation_oxygensat.proto  observation_resprate.proto  observation_vitalsigns.proto  observation_vitalspanel.proto  pico_element_profile.proto  profile_for_catalog.proto  profile_for_hla_genotyping_results.proto  provenance_relevant_history.proto  service_request_genetics.proto  shareable_activity_definition.proto  shareable_code_system.proto  shareable_library.proto  shareable_measure.proto  (+3 more)
proto/google/fhir/proto/r4/core/resources/: account.proto  activity_definition.proto  adverse_event.proto  allergy_intolerance.proto  appointment.proto  appointment_response.proto  audit_event.proto  basic.proto  binary.proto  biologically_derived_product.proto  body_structure.proto  bundle_and_contained_resource.proto  capability_statement.proto  care_plan.proto  care_team.proto  catalog_entry.proto  charge_item.proto  charge_item_definition.proto  claim.proto  claim_response.proto  clinical_impression.proto  code_system.proto  communication.proto  communication_request.proto  compartment_definition.proto  composition.proto  concept_map.proto  condition.proto  consent.proto  contract.proto  coverage.proto  coverage_eligibility_request.proto  coverage_eligibility_response.proto  detected_issue.proto  device.proto  device_definition.proto  device_metric.proto  device_request.proto  device_use_statement.proto  diagnostic_report.proto  (+109 more)
proto/google/fhir/proto/r5/: fhirproto_extensions.proto  ml_extensions.proto
proto/google/fhir/proto/r5/core/: codes.proto  datatypes.proto  valuesets.proto
proto/google/fhir/proto/r5/core/resources/: account.proto  activity_definition.proto  actor_definition.proto  administrable_product_definition.proto  adverse_event.proto  allergy_intolerance.proto  appointment.proto  appointment_response.proto  artifact_assessment.proto  audit_event.proto  basic.proto  binary.proto  biologically_derived_product.proto  biologically_derived_product_dispense.proto  body_structure.proto  bundle_and_contained_resource.proto  capability_statement.proto  care_plan.proto  care_team.proto  charge_item.proto  charge_item_definition.proto  citation.proto  claim.proto  (+135 more)
proto/google/fhir/proto/stu3/: codes.proto  datatypes.proto  extensions.proto  fhirproto_extensions.proto  metadatatypes.proto  ml_extensions.proto  primitive_test_suite.proto  profiles.proto  resources.proto  uscore.proto  uscore_codes.proto
testdata/r4/: BUILD
testdata/stu3/: BUILD
