module(
    name = "com_google_fhir",
    repo_name = "com_google_fhir",
    version = "0.8.0",
)

bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "abseil-cpp", version = "20250127.1", repo_name = "com_google_absl")
bazel_dep(name = "antlr4-cpp-runtime", version = "4.13.2", repo_name = "antlr_cc_runtime")
bazel_dep(name = "icu", version = "76.1.bcr.1")
bazel_dep(name = "glog", version = "0.7.1", repo_name = "com_github_glog_glog")
bazel_dep(name = "google_bazel_common", version = "0.0.1")
bazel_dep(name = "googletest", version = "1.16.0", repo_name = "com_google_googletest")
bazel_dep(name = "nlohmann_json", version = "3.11.3.bcr.1")
bazel_dep(name = "libarchive", version = "3.7.5.bcr.1")
bazel_dep(name = "re2", version = "2024-07-02.bcr.1", repo_name = "com_googlesource_code_re2")
bazel_dep(name = "rules_java", version = "8.11.0")
bazel_dep(name = "rules_go", version = "0.53.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "protobuf", version = "29.1", repo_name = "com_google_protobuf")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "toolchains_protoc", version = "0.3.7")  # Prebuilt protoc

bazel_dep(name = "platforms", version = "0.0.11", dev_dependency = True)
bazel_dep(name = "buildifier_prebuilt", version = "7.3.1", dev_dependency = True)
bazel_dep(name = "gazelle", version = "0.36.0", dev_dependency = True, repo_name = "bazel_gazelle")
bazel_dep(name = "rules_jvm_external", version = "6.6", dev_dependency = True)

####################################
# Non bzl-modularized dependencies #
####################################

non_module_dependencies = use_extension("//:extensions.bzl", "non_module_dependencies")
use_repo(non_module_dependencies, "hl7.fhir.r4.core_4.0.1")
use_repo(non_module_dependencies, "hl7.fhir.r5.core_5.0.0")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "com.beust:jcommander:1.72",
        "com.fasterxml.jackson.core:jackson-annotations:2.9.5",
        "com.fasterxml.jackson.core:jackson-core:2.9.5",
        "com.fasterxml.jackson.core:jackson-databind:2.9.5",
        "com.google.cloud:google-cloud-bigquery:1.38.0",
        "com.google.code.gson:gson:2.8.6",
        "com.google.errorprone:error_prone_annotations:2.3.3",
        "com.google.guava:guava-testlib:31.1-jre",
        "com.google.guava:guava:31.1-jre",
        "com.google.http-client:google-http-client-gson:1.43.0",
        "com.google.testparameterinjector:test-parameter-injector:1.15",
        "com.google.truth:truth:0.42",
        "com.google.truth.extensions:truth-proto-extension:1.1",
        "junit:junit:4.13-rc-1",
        "org.antlr:antlr4:jar:4.7.1",
        "org.apache.beam:beam-runners-direct-java:2.9.0",
        "org.apache.beam:beam-runners-google-cloud-dataflow-java:2.9.0",
        "org.apache.beam:beam-sdks-java-core:2.9.0",
        "org.apache.commons:commons-compress:1.21",
        "org.slf4j:slf4j-simple:1.7.25",
    ],
    lock_file = "//bazel:maven_install.json",
    repositories = [
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")

#########################
#  Golang dependencies  #
#########################

# See rules_go docs here: https://github.com/bazelbuild/rules_go/blob/master/docs/go/core/bzlmod.md
go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.0")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//go:go.mod")

# go_deps.bzl is no longer required as rules_go parses the go.mod file directly
# Note: non-indirect (i.e. direct go.mod dependencies) MUST be added to this use_repo set.
use_repo(
    go_deps,
    "com_github_antlr4_go_antlr_v4",
    "com_github_golang_protobuf",
    "com_github_google_go_cmp",
    "com_github_json_iterator_go",
    "org_bitbucket_creachadair_stringset",
    "org_golang_google_protobuf",
    "org_golang_x_exp",
)
